# garage_avoidance_pkg

./: .gitignore
garage_behavior_tree/: CMakeLists.txt  nav2_tree_nodes.xml  package.xml
garage_behavior_tree/include/garage_behavior_tree/: bt_action_node.hpp  compute_right_edge_path_action.hpp  find_car_avoidance_point_action.hpp  is_avoid_direction_has_car.hpp  is_car_moving.hpp  welt_model_node.hpp
garage_behavior_tree/src/: compute_right_edge_path_action.cpp  find_car_avoidance_point_action.cpp  is_avoid_direction_has_car.cpp  is_car_moving.cpp  welt_model_node.cpp
garage_navigator/: CMakeLists.txt  package.xml
garage_navigator/behavior_trees/: garage.xml  garage2.xml  garage3.xml  garage_back.xml  garage_vehicle_avoidance.xml  garage_vehicle_avoidance_back.xml  garage_vehicle_avoidance_continue.xml  test.xml
garage_navigator/include/garage_navigator/: bt_garage_navigator.hpp  garage_vehicle_avoidance.hpp  navigator.hpp
garage_navigator/launch/: bringup.launch.py  nav_through_poses.launch.py  navigation_launch.py  robot_avoidance.launch.py  servers.launch.py  test.launch.py
garage_navigator/params/: config.yaml  dsf_nav2_for_ad_4_exhibition.yaml
garage_navigator/src/: bt_garage_navigator.cpp  garage_vehicle_avoidance.cpp  main.cpp  navigate_through_poses_test.cpp  pub_polygons_markers.cpp  sub_global_costmap.cpp  test.cpp
garage_utils/: CMakeLists.txt  package.xml
garage_utils/include/garage_utils/: compute_right_edge_path.hpp  generate_model.hpp  generate_path.hpp  shortest_path_search.hpp  types.hpp
garage_utils/launch/: compute_right_edge_path.launch.py
garage_utils/params/: config.yaml
garage_utils/src/: compute_right_edge_path.cpp  generate_model.cpp  generate_path.cpp  shortest_path_search.cpp  test_compute_right_edge_path.cpp  test_find_car_avoidance_point.cpp  test_generate_model.cpp  test_generate_path.cpp  test_shortest_path_search.cpp
garage_utils_msgs/: CMakeLists.txt  package.xml
garage_utils_msgs/action/: ComputeRightEdgePath.action  GarageVehicleAvoidance.action  LookupVacantParkingSpace.action
garage_utils_msgs/msg/: Polygons.msg  State.msg
garage_utils_msgs/srv/: SortChannels.srv
