<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>garage_navigator</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1024988917@qq.com">ros</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>garage_behavior_tree</build_depend>
  <build_depend>garage_utils_msgs</build_depend>
 
  <depend>behaviortree_cpp_v3</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_util</depend>
  <build_depend>nav2_core</build_depend>
  <depend>nav2_behavior_tree</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
